modified classwork files

--- a/classwork.html
+++ b/classwork.html
@@ -2,10 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Classwork July, 15th</title>
+    <title>Classwork July, 15th: jQuery Demo</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>This is my classwork</h1>
+    <h1>jQuery Demo!</h1>
+    <ul class='recipes'>
+      <li>Bacon</li>
+      <li>Bacon</li>
+      <li>Bacon</li>
+      <li>Bacon</li>
+    </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src= "js/classwork.js">
+
+    </script>
   </body>
 </html>
